fixed the overlap of the hover state so that it fits to the exact height of the navbar

--- a/css/main.css
+++ b/css/main.css
@@ -110,6 +110,10 @@ transition-duration: 1s;
 background-color:transparent;
 }
 
+.fit-nav-height {
+  height: 64px;
+}
+
 
 /* ======================================================================
   SLIDER AREA
